--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
-    "name": "Regla de 3",
-    "version": "1.0",
-    "description": "Extensión para calcular la regla de 3 y lograr relaciones numéricas rápidas.",
+    "name": "Regla de 3 Simple",
+    "version": "1.1",
+    "description": "Extensión para calcular la regla de tres simple y lograr relaciones numéricas rápidas.",
     "action": {
         "default_popup": "popup.html"
     },
