--- a/refactor-react/public/manifest.json
+++ b/refactor-react/public/manifest.json
@@ -1,15 +1,16 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+    "manifest_version": 3,
+    "name": "Regla de 3 Simple v2",
+    "version": "2",
+    "description": "Extensión para calcular la regla de tres simple y lograr relaciones numéricas rápidas.",
+    "action": {
+        "default_popup": "index.html"
+    },
+    "icons": {
+        "16": "images/favicon-16x16.png",
+        "32": "images/favicon-32x32.png",
+        "96": "images/favicon-96x96.png",
+        "128": "images/favicon-128x128.png",
+        "256": "images/favicon-256x256.png"
     }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
 }
